# tinyLLM

./: CMakeLists.txt  README.md  chat.cpp  test.py  test_exp.cpp  test_tensor.cpp  train.cpp
include/: dataloader.h  exp.h  function.h  gpt.h  module.h  optimizer.h  params.h  tensor.h  tensor_impl.h  tokenizer.h  util.h
src/: dataloader.cpp  exp.cu  function.cu  gpt.cpp  module.cpp  optimizer.cu  tensor.cpp  tensor.cu  tensor_impl.cu  tokenizer.cpp
